# fastapi-ml-demo

./: .gitignore  Dockerfile  nx.json  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  Dockerfile.prod  docker-compose.yaml
fastapi-ml-demo/: main.py
fastapi-ml-demo/notebooks/: main.ipynb
frontend/: package-lock.json
