[tool.poetry]
name = "fastapi-ml-demo"
version = "0.1.0"
description = "FastAPI Tensorflow integration"
authors = ["dhzdhd <a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
tensorflow = "2.13.0"
pandas = "^2.1.0"
scikit-learn = "1.2.2"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[tool.taskipy.tasks]
api = "uvicorn fastapi-ml-demo.main:app --reload"
format = "black --check fastapi-ml-demo"
lint = "flake8 fastapi-ml-demo"
sort = "isort fastapi-ml-demo"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
